--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
+        <script src="https://kit.fontawesome.com/b954c4656e.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
         <title>Cards Spotify</title>
     </head>
@@ -11,11 +12,33 @@
         <div id="root" class="wrapper">
 
             <header>
+                <div class="header-left">
+                    <img src="img/logo-spotify.png" alt="logo spotify" class="img100">
+                </div>
+                <div class="header-right">
+                    <label for="genre-selector">Seleziona un genere</label>
+                    <select id="genre-selector">
 
+                    </select>
+                </div>
             </header>
 
             <main>
-                
+                <div class="card">
+                    <div class="card-top">
+                        <img src="https://images-na.ssl-images-amazon.com/images/I/810nSIQOLiL._SY355_.jpg" alt="locandina album" class="img100">
+                        <div class="layover">
+                           <i class="far fa-play-circle"></i>
+                        </div>
+                    </div>
+                    <div class="card-middle">
+                        <h3>title</h3>
+                    </div>
+                    <div class="card-bottom">
+                        <h4>author</h4>
+                        <h5>year</h5>
+                    </div>
+                </div>
             </main>
 
         </div>
