esercizio no-bonus

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/b954c4656e.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <title>Cards Spotify</title>
     </head>
     <body>
@@ -24,19 +27,19 @@
             </header>
 
             <main>
-                <div class="card">
+                <div v-for="album in albums" v-if="albums.length != 0" class="card">
                     <div class="card-top">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/810nSIQOLiL._SY355_.jpg" alt="locandina album" class="img100">
+                        <img :src="album.poster" :alt="'locandina ' + album.title" class="img100">
                         <div class="layover">
                            <i class="far fa-play-circle"></i>
                         </div>
                     </div>
                     <div class="card-middle">
-                        <h3>title</h3>
+                        <h3>{{ album.title }}</h3>
                     </div>
                     <div class="card-bottom">
-                        <h4>author</h4>
-                        <h5>year</h5>
+                        <h4>{{ album.author }}</h4>
+                        <h5>{{ album.year }}</h5>
                     </div>
                 </div>
             </main>
