--- a/index.html
+++ b/index.html
@@ -20,28 +20,49 @@
                 </div>
                 <div class="header-right">
                     <label for="genre-selector">Seleziona un genere</label>
-                    <select id="genre-selector">
-
+                    <select id="genre-selector" v-if="albums.length != 0" v-model="genreSelected">
+                        <option>All</option>
+                        <option v-for="genre in getGenreFromArray()">{{ genre }}</option>
                     </select>
                 </div>
             </header>
 
             <main>
-                <div v-for="album in albums" v-if="albums.length != 0" class="card">
-                    <div class="card-top">
-                        <img :src="album.poster" :alt="'locandina ' + album.title" class="img100">
-                        <div class="layover">
-                           <i class="far fa-play-circle"></i>
+                <template v-if="genreSelected != 'All'">
+                    <div v-for="album in filterAlbumsForGenre()" v-if="albums.length != 0" class="card">
+                        <div class="card-top">
+                            <img :src="album.poster" :alt="'locandina ' + album.title" class="img100">
+                            <div class="layover">
+                               <i class="far fa-play-circle"></i>
+                            </div>
+                        </div>
+                        <div class="card-middle">
+                            <h3>{{ album.title }}</h3>
+                        </div>
+                        <div class="card-bottom">
+                            <h4>{{ album.author }}</h4>
+                            <h5>{{ album.year }}</h5>
                         </div>
                     </div>
-                    <div class="card-middle">
-                        <h3>{{ album.title }}</h3>
+                </template>
+                <template v-else>
+                    <div v-for="album in albums" v-if="albums.length != 0" class="card">
+                        <div class="card-top">
+                            <img :src="album.poster" :alt="'locandina ' + album.title" class="img100">
+                            <div class="layover">
+                               <i class="far fa-play-circle"></i>
+                            </div>
+                        </div>
+                        <div class="card-middle">
+                            <h3>{{ album.title }}</h3>
+                        </div>
+                        <div class="card-bottom">
+                            <h4>{{ album.author }}</h4>
+                            <h5>{{ album.year }}</h5>
+                        </div>
                     </div>
-                    <div class="card-bottom">
-                        <h4>{{ album.author }}</h4>
-                        <h5>{{ album.year }}</h5>
-                    </div>
-                </div>
+                </template>
+
             </main>
 
         </div>
